--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
-django
-pillow
-djangorestframework
+asgiref==3.2.7
+Django==3.0.4
+djangorestframework==3.11.0
+mysqlclient==1.4.6
+Pillow==7.0.0
+PyMySQL==0.9.3
+pytz==2019.3
+sqlparse==0.3.1
