--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-asgiref==3.2.7
-Django==3.0.4
-djangorestframework==3.11.0
-mysqlclient==1.4.6
-Pillow==7.0.0
-PyMySQL==0.9.3
-pytz==2019.3
-sqlparse==0.3.1
+asgiref
+Django
+djangorestframework
+mysqlclient
+Pillow
+pytz
+sqlparse
